@@ -371,6 +371,14 @@ Space characters are not allowed in the \f2wckey_list\fP. Default is
 all wckeys\&.
 
 .TP
+\f3\-x \fP\f2associd_list\fP\f3,\fP \f3\-\-associations\fP\f3=\fP\f2assoc_list\fP
+Displays the statistics only for the jobs running under the
+association ids specified by the \f2assoc_list\fP operand, which is a
+comma\-separated list of association ids.
+Space characters are not allowed in the \f2assoc_list\fP. Default is
+all associations\&.
+
+.TP
 \f3\-X \fP\f3,\fP \f3\-\-allocations\fP
 Only show cumulative statistics for each job, not the intermediate steps.
 
